--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm install
 
       - name: Run TypeScript type checking
-        run: npm run type-check
+        run: npm run typecheck
 
       - name: Run lint
         run: npm run lint
